# ws

./: .clang-format  .gitignore  README.md  clang.ini  clang_debug.ini  clang_release.ini  gcc.ini  gcc_debug.ini  gcc_release.ini  meson.build  meson_options.txt  test.html
src/: base64.cpp  base64.hpp  base64_codec.cpp  base64_codec.hpp  byte_buffer.hpp  connection.hpp  connection_fmt.hpp  frame.hpp  frame_fmt.hpp  main.cpp  sha1.cpp  sha1.hpp  str_utils.hpp  websocket_frame.cpp  websocket_frame.hpp  websocket_frame_fmt.hpp  websocket_frame_generator.cpp  websocket_frame_generator.hpp
src/echo_server/: echo_server.cpp  echo_server.hpp  main.cpp
src/tcp_echo_server/: main.cpp  tcp_echo_server.cpp  tcp_echo_server.hpp
src/test_client/: main.cpp  test_client.cpp  test_client.hpp
src/util/: base64_codec.cpp  base64_codec.hpp  byte_buffer.hpp  str_utils.hpp
src/ws/: connection.hpp  connection_fmt.hpp  frame.cpp  frame_generator.cpp  frame_generator.hpp
subprojects/: spdlog.wrap
tests/: test_base64.cpp  test_base64_codec.cpp  test_byte_buffer.cpp  test_frame.cpp  test_frame_generator.cpp  test_sha1.cpp  test_str_utils.cpp  test_websocket_frame.cpp  test_websocket_frame_generator.cpp
tests/util/: test_base64_codec.cpp  test_sha1.cpp  test_str_utils.cpp
tests/ws/: test_frame.cpp  test_frame_generator.cpp
